--- a/client/templates/termsOfUse/termsOfUse_template.html
+++ b/client/templates/termsOfUse/termsOfUse_template.html
@@ -1,7 +1,7 @@
-<template name='termOfUse'>
-  <div class="ui main container">
+<template name='termsOfUse'>
+
     <div class="ui basic segment">
-      <p><b>Conditions générales d'utilisation du site internet loya.li de Loyali</b></p>
+      <p><b>Conditions générales d'utilisation du site internet loya.li de l'application Loyali</b></p>
 
       <p>Le présent document a pour
       objet de définir les modalités et conditions dans lesquelles d’une part,
@@ -155,7 +155,7 @@
       aux présentes conditions d’utilisation du site, vous pouvez nous écrire à
       l’adresse suivante : </p>
 
-      <p>guillaume.darbonne@gmail.com </p>
+      <p>guillaume.darbonne@gmail.com</p>
     </div>
-  </div>
+
 </template>
