--- a/client/templates/about/about_template.html
+++ b/client/templates/about/about_template.html
@@ -1,5 +1,5 @@
 <template name='about'>
-  <div class="ui main container">
+
     <div class="ui basic segment">
       <h2 class="ui header">A propos de Loyali</h2>
       <p class="ui justified text">
@@ -32,7 +32,7 @@
       </h2>
       <a class="ui button fluid" href="{{pathFor 'contact'}}">Contact</a>
       <br>
-      <a class="ui button fluid" href="{{pathFor 'termOfUse'}}">Conditions générales d'utilisation</a>
+      <a class="ui button fluid" href="{{pathFor 'termsOfUse'}}">Conditions générales d'utilisation</a>
     </div>
-  </div>
+
 </template>
