--- a/client/templates/editCard/editCard_template.html
+++ b/client/templates/editCard/editCard_template.html
@@ -17,12 +17,15 @@
       {{> afQuickField placeholder="schemaLabel" name="notes" id="cardNotes"}}
       {{> afQuickField  name="imageId" class="hidden" id="imageId"}}
       {{> afQuickField  name="cardBrandId" class="hidden" id="cardBrandId"}}
-      <button class="fluid ui positive button" type="submit">Enregistrer</button>
-      <br>
-      <a class="fluid ui button" href="{{pathFor 'loyaltyCards'}}">Annuler</a>
+      <div class="ui grid">
+        <div class="two column row">
+          <div class="column"><a class="fluid ui button" href="{{pathFor 'loyaltyCards'}}">Annuler</a></div>
+          <div class="column"><button class="fluid ui positive button" type="submit">Enregistrer</button></div>
+        </div>
+      </div>
     {{/autoForm}}
     <br>
-    <button class="fluid ui negative button deleteCard" >Supprimer</button>
+    <button type="button" class="fluid ui negative button deleteCard" >Supprimer</button>
 
   {{/with}}
 </template>
