--- a/client/templates/placeEdit/placeEdit_template.html
+++ b/client/templates/placeEdit/placeEdit_template.html
@@ -27,12 +27,14 @@
         {{> afQuickField defaultValue="10" name="loyaltyCard.size"}}
         {{> afQuickField defaultValue="5" name="loyaltyCard.voucherValue"}}
       </div>
-      <p>
-      </p>
-      <button class="fluid ui positive button" type="submit">Enregistrer</button>
     {{/autoForm}}
     <br>
-    <a class="fluid ui button" href="{{pathFor 'place' placeId=_id}}">Annuler</a>
+    <div class="ui grid">
+      <div class="two column row">
+        <div class="column"><a class="fluid ui button" href="{{pathFor 'place' placeId=_id}}">Annuler</a></div>
+        <div class="column"><button class="fluid ui positive button" type="submit">Enregistrer</button></div>
+      </div>
+    </div>
     <br>
     <hr>
     <button class="negative ui fluid button" data-action="deletePlace">Supprimer</button>
