--- a/client/templates/loyaltyCards/loyaltyCards_template.html
+++ b/client/templates/loyaltyCards/loyaltyCards_template.html
@@ -47,7 +47,7 @@
           <div class="content">
             <a class="header" href="{{pathFor 'card' cardId=_id}}">{{name}}</a>
             <div class="description">
-              {{reFormat format}} <small>Mise à jour {{#if updatedAt}}{{fromNow updatedAt}}{{else}}{{fromNow createdAt}}{{/if}}</small>
+              {{code}} <small>{{reFormat format}}</small>
             </div>
           </div>
         </div>
