--- a/client/templates/calc/calc_template.html
+++ b/client/templates/calc/calc_template.html
@@ -73,7 +73,7 @@
             </div>
           </div>
           <h2 class="ui right aligned header">Avoir : {{{formatMoney voucher}}}</h2>
-          <button class="fluid ui button calcVoucher">recalculer</button>
+          <button type="button" class="fluid ui button calcVoucher">recalculer</button>
         </div>
       </div>
       {{#if isSellerOrOwnerRole}}
