--- a/client/templates/cropper/cropper_template.html
+++ b/client/templates/cropper/cropper_template.html
@@ -3,11 +3,11 @@
     <div class="ui basic segment">
       <img src="" alt=""  class="ui centered medium image" id="cropping" />
       <br>
-      <button class="ui labeled icon button" id="rotate">
-        <i class="horizontally flipped undo icon"></i>
+      <button type="button" class="ui labeled icon button" id="rotate">
+        <i class="repeat icon"></i>
         Tourner
       </button>
-      <button class="right floated ui right labeled positive icon button" id="save">
+      <button type="button" class="right floated ui right labeled positive icon button" id="save">
         <i class="check icon"></i>
         Enregistrer
       </button>
