--- a/client/templates/loginText/loginText_template.html
+++ b/client/templates/loginText/loginText_template.html
@@ -4,9 +4,9 @@
     Vous devez d'abord vous connecter.
   </p>
   <div class="ui buttons">
-    <button class="ui button" data-action="signIn">Se connecter</button>
+    <button type="button" class="ui button" data-action="signIn">Se connecter</button>
     <div class="or" data-text="ou"></div>
-    <button class="ui button" data-action="signUp">S'enregistrer</button>
+    <button type="button" class="ui button" data-action="signUp">S'enregistrer</button>
   </div>
   {{/unless}}
 </template>
