--- a/client/templates/myPlaces/myPlaces_template.html
+++ b/client/templates/myPlaces/myPlaces_template.html
@@ -1,6 +1,6 @@
 <template name='myPlaces'>
 
-    <button class="teal right floated ui circular icon button" id="myPlacesHelp" data-position="top right"><i class="help icon"></i></button>
+    <button type="button" class="teal right floated ui circular icon button" id="myPlacesHelp" data-position="top right"><i class="help icon"></i></button>
     <div class="ui special popup">
       Vous avez besoin d'aide ? Apellez Guillaume au <a href="tel:+33632424849">06 32 42 48 49</a>
     </div>
@@ -52,7 +52,7 @@
         </div>
       </h2>
       <p>
-        <button class="ui button positive" data-action="createPlace">Inscrivez votre commerce</button>
+        <button type="button" class="ui button positive" data-action="createPlace">Inscrivez votre commerce</button>
       </p>
     </div>
     {{ /if }}
