--- a/client/templates/owners/owners_template.html
+++ b/client/templates/owners/owners_template.html
@@ -11,7 +11,7 @@
     <h4 class="ui header">Ajouter un propriétaire</h4>
     <div class="ui action fluid input">
       <input type="email" id="ownerMail" placeholder="Adresse email du propriétaire">
-      <button class="ui green icon button" id="searchOwner"><i class="plus icon"></i></button>
+      <button type="button" class="ui green icon button" id="searchOwner"><i class="plus icon"></i></button>
     </div>
     <h2 class="ui header">Vendeurs</h2>
     <div class="ui list">
@@ -22,7 +22,7 @@
     <h4 class="ui header">Ajouter un vendeur</h4>
     <div class="ui action fluid input">
       <input type="email" id="sellerMail" placeholder="Adresse email du vendeur">
-      <button class="ui green icon button" id="searchSeller"><i class="plus icon"></i></button>
+      <button type="button" class="ui green icon button" id="searchSeller"><i class="plus icon"></i></button>
     </div>
     <br>
     <a href="{{pathFor 'placeEdit' placeId=_id}}" class="left floated ui circular icon button"><i class="arrow left icon"></i></a>
