--- a/client/templates/placeEdit/placeEdit_template.html
+++ b/client/templates/placeEdit/placeEdit_template.html
@@ -37,7 +37,7 @@
     {{/autoForm}}
     <br>
     <hr>
-    <button class="negative ui fluid button" data-action="deletePlace">Supprimer</button>
+    <button type="button" class="negative ui fluid button" data-action="deletePlace">Supprimer</button>
 
   {{/if}}
   {{/with}}
