--- a/client/templates/profile/profile_template.html
+++ b/client/templates/profile/profile_template.html
@@ -22,7 +22,7 @@
         Changer de mot de passe
       </a>
       <br>
-      <button class="ui fluid orange button" data-action="logout">
+      <button type="button" class="ui fluid orange button" data-action="logout">
         Se déconnecter
       </button>
     </div>
