--- a/client/templates/place/place_template.html
+++ b/client/templates/place/place_template.html
@@ -1,9 +1,10 @@
 <template name='place'>
 
     {{#with place}}
-    {{#if isSellerOrOwner}}
     <div class="ui basic segment">
-      {{#if isOwner}}
+    {{#if isSellerOrOwner}}
+      <div id="myPlaceHeader">
+        {{#if isOwner}}
         <a href="{{pathFor 'placeEdit' placeId=_id}}" class="teal right floated ui circular icon button"><i class="pencil icon"></i></a>
         <div class="ui slider checkbox">
           <input type="checkbox" name="enabled" checked="{{enabled}}" data-action="enablePlace">
@@ -11,53 +12,53 @@
         </div>
         <br>
         <br>
-      {{/if}}
-      <br>
-      <div class="ui grid">
-        <div class="height wide column">
-          <button type="button" class="ui {{#if currentPlace}}green{{/if}} labeled icon button" data-action="setCurrentPlace">
-            <i class="marker icon"></i>
-            J'y {{#if currentPlace}}suis{{else}}vais{{/if}}
-          </button>
+        {{/if}}
+        <br>
+        <div class="ui grid">
+          <div class="height wide column">
+            <button type="button" class="ui {{#if currentPlace}}green{{/if}} labeled icon button fluid" data-action="setCurrentPlace">
+              <i class="marker icon"></i>
+              J'y {{#if currentPlace}}suis{{else}}vais{{/if}}
+            </button>
+          </div>
+          <div class="height wide column">
+            <a class="ui blue labeled icon button fluid disabled" href="{{pathFor 'promotions' placeId=_id}}">
+              <i class="star icon"></i>
+              Mes promos
+            </a>
+          </div>
         </div>
-        <div class="height wide column">
-          <a class="ui blue labeled icon button disabled" href="{{pathFor 'promotions' placeId=_id}}">
-            <i class="star icon"></i>
-            Mes promos
-          </a>
+        <br>
+        <div class="ui three tiny statistics">
+          <div class="ui statistic">
+            <div class="value">
+              {{or customers.length 0}}
+            </div>
+            <div class="label">
+              Client{{#if greaterThan customers.length 1}}s{{/if}}
+            </div>
+          </div>
+          <div class="ui statistic">
+            <div class="value">
+              {{voucherCount}}
+            </div>
+            <div class="label">
+              Avoir{{#if greaterThan voucherCount 1}}s{{/if}}
+            </div>
+          </div>
+          <div class="ui statistic">
+            <div class="value">
+              {{loyaltyCardCount}}
+            </div>
+            <div class="label">
+              Carte{{#if greaterThan loyaltyCardCount 1}}s{{/if}}
+            </div>
+          </div>
         </div>
       </div>
-      <br>
-      <div class="ui three tiny statistics">
-        <div class="ui statistic">
-          <div class="value">
-            {{or customers.length 0}}
-          </div>
-          <div class="label">
-            Client{{#if greaterThan customers.length 1}}s{{/if}}
-          </div>
-        </div>
-        <div class="ui statistic">
-          <div class="value">
-            {{voucherCount}}
-          </div>
-          <div class="label">
-            Avoir{{#if greaterThan voucherCount 1}}s{{/if}}
-          </div>
-        </div>
-        <div class="ui statistic">
-          <div class="value">
-            {{loyaltyCardCount}}
-          </div>
-          <div class="label">
-            Carte{{#if greaterThan loyaltyCardCount 1}}s{{/if}}
-          </div>
-        </div>
-      </div>
-    </div>
-    <hr>
+      <i class="up arrow  grey icon" id="toggleMyPlaceHeader"></i>
     {{/if}}
-    <div class="ui basic segment">
+
       <h1 class="ui center aligned header">
         {{name}}
         <div class="sub header">{{description}}</div>
@@ -96,7 +97,6 @@
             <div class="meta" data-action="loyaltyCardHistory">
               &nbsp;<i class="grey history icon"></i> Mise à jour {{#if myLoyaltyCard.updatedAt}}{{fromNow myLoyaltyCard.updatedAt}}{{else}}{{fromNow myLoyaltyCard.createdAt}}{{/if}}
             </div>
-
           </div>
         </div>
       {{/if}}
