--- a/client/templates/calc/calc_template.html
+++ b/client/templates/calc/calc_template.html
@@ -45,23 +45,23 @@
         <div class="ui form">
           <div class="three fields">
             <div class="field">
-              <label for="total">Total a payer</label>
+              <label for="total">Total à payer</label>
               <div class="ui right labeled left icon large input">
                 <i class="calculator icon"></i>
-                <input type="number" step="any" placeholder="Total a payer" id="total">
+                <input type="number" step="any" placeholder="Total à payer" id="total">
                 <div class="ui label"><i class="euro icon"></i></div>
               </div>
             </div>
             <div class="field">
-              <label for="ticketValue">Valeur du ticket</label>
+              <label for="ticketValue">Valeur du titre restaurant</label>
               <div class="ui right labeled left icon large input">
                 <i class="ticket icon"></i>
-                <input type="number" step="any" placeholder="Valeur du ticket" id="ticketValue">
+                <input type="number" step="any" placeholder="Valeur du titre restaurant" id="ticketValue">
                 <div class="ui label"><i class="euro icon"></i></div>
               </div>
             </div>
             <div class="field">
-              <label for="ticketCount">Nombre de tickets</label>
+              <label for="ticketCount">Nombre de titres restaurant</label>
               <select class="ui dropdown" id="ticketCount" name="ticketCount">
                 <option value="1">1</option>
                 <option value="2">2</option>
