--- a/client/templates/placeEdit/placeEdit_template.html
+++ b/client/templates/placeEdit/placeEdit_template.html
@@ -16,6 +16,8 @@
       {{> afQuickField placeholder="schemaLabel" name="addresses.0.city"}}
       {{> afQuickField placeholder="schemaLabel" name="addresses.0.country"}}
       {{> afQuickField placeholder="schemaLabel" name="addresses.0.phone"}}
+      {{> afQuickField placeholder="schemaLabel" name="addresses.0.email"}}
+      {{> afQuickField placeholder="schemaLabel" name="website"}}
       {{> afQuickField placeholder="schemaLabel" name="loyaltyCard.enabled" checkboxType="slider"}}
       <div class="loyaltyCard">
         {{#if loyaltyCard.pointCost}}
