--- a/client/templates/about/about_template.html
+++ b/client/templates/about/about_template.html
@@ -8,7 +8,7 @@
       <h4 class="ui header">Pour les commerçants</h4>
       <ul>
         <li>Gérer les cartes de fidélité de vos clients depuis votre smartphone</li>
-        <li>Rendre la monnaie des tickets restaurant sous forme d’avoir</li>
+        <li>Rendre la monnaie des titres restaurant sous forme d’avoir</li>
         <li>Proposer des promotions à vos clients (bientôt)</li>
       </ul>
       <h4 class="ui header">Pour les clients</h4>
