search and updates

--- a/client/templates/search/search_template.html
+++ b/client/templates/search/search_template.html
@@ -3,7 +3,7 @@
     <form id="search">
       <div class="ui large fluid icon input">
         <input type="text" placeholder="Commerce, ville, cp" id="searchQuery" value="{{searchQuery}}">
-        <i class="search icon"></i>
+        <i class="search link icon" id="searchIcon"></i>
       </div>
     </form>
     <div class="ui basic segment">
