--- a/client/templates/_comons/header/header_template.html
+++ b/client/templates/_comons/header/header_template.html
@@ -1,7 +1,7 @@
 <template name='header'>
   <div class="ui top fixed menu borderless blue inverted">
     <div class="left menu">
-      <div class="item">
+      <div class="left item">
         {{#if isNotHome}}
           <i class="big left chevron icon" data-action="goBack"></i>
         {{/if}}
