--- a/client/templates/about/about_template.html
+++ b/client/templates/about/about_template.html
@@ -3,24 +3,33 @@
     <div class="ui basic segment">
       <h2 class="ui header">A propos de Loyali</h2>
       <p class="ui justified text">
-        C'est une application qui permet de gérer vos cartes de fidélité et vos avoirs.
+        C'est une application qui permet de gérer vos cartes de fidélité et vos avoirs en temps réel.
       </p>
+
+      <h4 class="ui header">Pour tout le monde</h4>
+      <ul>
+        <li>Voir le nombre de point aquis chez les commerçants partenaires</li>
+        <li>Voir le montant de vos avoirs cumulés chez les commerçants partenaires</li>
+        <li>Regrouper toutes vos cartes de fidélité des grandes enseignes dans votre smartphone en les scannant</li>
+      </ul>
       <h4 class="ui header">Pour les commerçants</h4>
       <ul>
         <li>Gérer les cartes de fidélité de vos clients depuis votre smartphone</li>
         <li>Rendre la monnaie des titres restaurant sous forme d’avoir</li>
         <li>Proposer des promotions à vos clients (bientôt)</li>
       </ul>
-      <h4 class="ui header">Pour les clients</h4>
-      <ul>
-        <li>Regrouper toutes vos cartes de fidélité dans votre smartphone en les scannant</li>
-        <li>Suivre le solde de points gagnés chez les commerçants partenaires</li>
-        <li>Voir le montant de vos avoirs cumulés chez les commerçants partenaires</li>
-      </ul>
+      <h4 class="ui header">Comment ça se passe ?</h4>
+      <p>
+        Il faut que le client et le commerçant ai l'application Loyali installée.<br>
+        Le client présente son profil avec son QR code (icône en haut à droite).<br>
+        Le commerçant scan le QR code avec l'application Loyali.<br>
+        Il peux maintenant ajouter un point à la carte de fidélité du client, lui rendre la monnaie sur un titre restaurant, ou utiliser l'avoir déjà disponible.<br>
+        Toutes les transactions conservent un historique pour garantir la sécurité.<br>
+        Le client voit en temps réel les points s’ajouter à sa carte de fidélité et le montant de son avoir évoluer.
+      </p>
       <h4 class="ui center aligned header">
         Avec Loyali, fini le porte monnaie surchargé inutilement.
       </h4>
-
     </div>
     <div class="ui basic center aligned segment">
       <h2 class="ui icon header">
