--- a/client/templates/termsOfUse/termsOfUse_template.html
+++ b/client/templates/termsOfUse/termsOfUse_template.html
@@ -155,7 +155,7 @@
       aux présentes conditions d’utilisation du site, vous pouvez nous écrire à
       l’adresse suivante : </p>
 
-      <p>guillaume.darbonne@gmail.com</p>
+      <p>guillaume@loya.li</p>
     </div>
 
 </template>
