--- a/client/templates/about/about_template.html
+++ b/client/templates/about/about_template.html
@@ -27,6 +27,13 @@
         Toutes les transactions conservent un historique pour garantir la sécurité.<br>
         Le client voit en temps réel les points s’ajouter à sa carte de fidélité et le montant de son avoir évoluer.
       </p>
+      <h4 class="ui header">Combien ça coûte ?</h4>
+      <p>
+        Rien du tout.<br>
+        L’utilisation de l’application Loyali est gratuite pour les commerçants et leurs clients.<br>
+        La seule option payante est la promotion que peut faire le commerce vers ses clients.<br>
+        Cette option doit être payante pour éviter de noyer les clients sous une montagne de pub comme le font les grandes enseignes.
+      </p>
       <h4 class="ui center aligned header">
         Avec Loyali, fini le porte monnaie surchargé inutilement.
       </h4>
