--- a/client/templates/about/about_template.html
+++ b/client/templates/about/about_template.html
@@ -8,7 +8,7 @@
 
       <h4 class="ui header">Pour tout le monde</h4>
       <ul>
-        <li>Voir le nombre de point aquis chez les commerçants partenaires</li>
+        <li>Voir le nombre de points aquis chez les commerçants partenaires</li>
         <li>Voir le montant de vos avoirs cumulés chez les commerçants partenaires</li>
         <li>Regrouper toutes vos cartes de fidélité des grandes enseignes dans votre smartphone en les scannant</li>
       </ul>
@@ -20,10 +20,10 @@
       </ul>
       <h4 class="ui header">Comment ça se passe ?</h4>
       <p>
-        Il faut que le client et le commerçant ai l'application Loyali installée.<br>
+        Il faut que le client et le commerçant aient l'application Loyali installée.<br>
         Le client présente son profil avec son QR code (icône en haut à droite).<br>
-        Le commerçant scan le QR code avec l'application Loyali.<br>
-        Il peux maintenant ajouter un point à la carte de fidélité du client, lui rendre la monnaie sur un titre restaurant, ou utiliser l'avoir déjà disponible.<br>
+        Le commerçant scanne le QR code avec l'application Loyali.<br>
+        Il peut maintenant ajouter un point à la carte de fidélité du client, lui rendre la monnaie sur un titre restaurant, ou utiliser l'avoir déjà disponible.<br>
         Toutes les transactions conservent un historique pour garantir la sécurité.<br>
         Le client voit en temps réel les points s’ajouter à sa carte de fidélité et le montant de son avoir évoluer.
       </p>
