--- a/client/templates/about/about_template.html
+++ b/client/templates/about/about_template.html
@@ -8,7 +8,7 @@
 
       <h4 class="ui header">Pour tout le monde</h4>
       <ul>
-        <li>Voir le nombre de points aquis chez les commerçants partenaires</li>
+        <li>Voir le nombre de points acquis chez les commerçants partenaires</li>
         <li>Voir le montant de vos avoirs cumulés chez les commerçants partenaires</li>
         <li>Regrouper toutes vos cartes de fidélité des grandes enseignes dans votre smartphone en les scannant</li>
       </ul>
