--- a/client/templates/loyaltyCards/loyaltyCards_template.html
+++ b/client/templates/loyaltyCards/loyaltyCards_template.html
@@ -25,7 +25,7 @@
         {{else}}
         <div class="ui basic center aligned segment">
           <h2 class="ui icon header">
-            <i class="yellow star icon"></i>
+            <img class="ui tiny image" src="{{loyaliLogo}}" alt="icône Loyali" />
             <div class="content">
               Vous n'avez pas encore de cartes de fidélité Loyali
               <div class="sub header">Cherchez l'affiche <strong>Loyali</strong> dans vos commerces habituels ou parlez en à votre commerçant. Merci ツ</div>
